@@ -327,5 +327,6 @@ Thanks to polluks for suggestions!
 
 v1.6.4
 
+ * forth: added ?do
  * forth: added defer, defer!, is to compat
  * debug: made see show branch
